tests/rosetta/out/Smalltalk/almost-prime.out
/tmp/almost-prime.st:6: parse error, expected ']'
